@@ -14,6 +14,9 @@ See <<async-annotation-driven-enable-signature>> for more information.
 Async reply types now include `CompleteableFuture`
 See <<async-returns>> for more information.
 
+`MessageConverter` s can now return `Optional.empty()` for a null value; this is currently implemented by the `Jackson2JsonMessageConverter`.
+See <<Jackson2JsonMessageConverter-from-message>> for more information.
+
 ==== `RabbitAdmin` Changes
 
 A new property `recoverManualDeclarations` allows recovery of manually declared queues/exchanges/bindings.
